feat: adiciona endpoint getMeuPerfil em PersonalService